--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" class="ooze plur">
 <meta charset="utf-8">
-<title>aya mural</title>
+
+<title>WhenYouCloseYourEye muraL</title>
+
 <meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark light">
 <meta name=theme-color content="#606">
 <meta name=description content="aya style">
-<link rel="stylesheet" href="aya.css" media=(color)>
-<link rel="stylesheet" href="ayz.css" media="all">
+
+<link rel="stylesheet" href="neptune.css" media=(color)>
+<link rel="stylesheet" href="mercury.css" media="all">
+<link rel="home" href="https://webmural.com">
+<link rel="prev" href="/aya">
+<link rel="next" href="/possible">
+
 <link rel="license" href="UNLICENSE.txt">
-<link rel="icon" href="icon.svg">
+<link rel="icon" href="hue.svg">
 
 <main>
-  <h1>aya</h1>
-  <menu>
-    <li><a href="/rainbov">color</a>
-    <li><a href="/nature">rat</a><i>i</i><a href="/ohm">ohm</a>
-    <li><a href="/pg">PG-182</a>
-  </menu>
+  <header>
+   <h1>when<br>you<br>close<br>your<br>eye...</h1>
+  </header>
+  <p>
+    <a href="https://webmural.com/elara">watt<br>color<br>finds<br>hue?</a>
+  </p>
 </main>
